# iterate-columbia-hackathon

./: .env.example  AMS_sc_terminal_daily_2023.csv  AMS_sc_terminal_daily_2024.csv  CLAUDE.md  README.md  docker-compose.yml  one-pager.md
db/: init.sql  market_data.sql
eval/: .gitignore  EVAL.md  pyproject.toml
eval/analyzer_prompts/: v1.txt
eval/golden/: scenarios.csv
eval/judge_prompts/: v1.txt
eval/scripts/: run_eval.py
eval/src/commodity_eval/: __init__.py  analyzer.py  judge.py  models.py  runner.py
frontend/: Dockerfile  index.html  package-lock.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AIAnalysis.tsx  AlertForm.tsx  AlertList.tsx  AlertsPage.tsx  MarketDataView.tsx
platform/: .gitignore  Dockerfile  ai_handler.go  ai_handler_test.go  csv_import.go  csv_import_test.go  go.mod  handler.go  handler_test.go  main.go  main_test.go  service.go  simulation.go  simulation_test.go  whitecircle.go  whitecircle_test.go
